--- a/front/dsr-front/package.json
+++ b/front/dsr-front/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@truffle/contract": "^4.6.31",
+    "ethers": "^6.11.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
